packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/non_monotonic_timing.mmd
---
title: "Non-Monotonic Timing"
---

# Timing must be monotonically increasing
[00:10.000]
- tempo 120

[00:05.000]
- note_on 1.C4 100 1000ms
